--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>トップメニュー</title>
+	<meta charset="UTF-8">
+	<title>トップメニュー</title>
 </head>
+
 <body>
-トップメニューだよ
+	<div th:insert="common/sourceList :: sourceList"></div>
+	<div th:replace="common/header :: header"></div>
+	トップメニューだよ
 </body>
+
 </html>
