--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <body>
-	<nav class="navbar bg-body-tertiary" th:fragment="header">
+	<nav class="navbar bg-info navbar-dark" th:fragment="header">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="@{/menu}">商品管理システム</a>
+			<form th:action="@{/logout}" method="post">
+				<input type="submit" class="btn btn-light" value="ログアウト"/>
+			</form>
 		</div>
 	</nav>
 </body>
