--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,7 +9,23 @@
 <body>
 	<div th:insert="common/sourceList :: sourceList"></div>
 	<div th:replace="common/header :: header"></div>
-	トップメニューだよ
+	<div class="container-fluid">
+		<h2>トップメニュー</h2>
+		<div class="mt-3">
+			ユーザーの情報管理はこちら
+		</div>
+		<a href="" class="btn btn-danger">
+			商品一覧画面へ
+		</a>
+		<th:block th:if="${hasUserManager}">
+			<div class="mt-3">
+				ユーザー情報の管理はこちら
+			</div>
+		</th:block>
+		<a href="" class="btn btn-danger">
+			ユーザー管理画面へ
+		</a>
+	</div>
 </body>
 
 </html>
