--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -12,19 +12,15 @@
 	<div class="container-fluid">
 		<h2>トップメニュー</h2>
 		<div class="mt-3">
-			ユーザーの情報管理はこちら
+			商品一覧の確認、管理はコチラ
 		</div>
-		<a href="" class="btn btn-danger">
-			商品一覧画面へ
-		</a>
-		<th:block th:if="${hasUserManager}">
+		<a href="" class="btn btn-primary">商品一覧画面へ</a>
+		<th:block th:if="${hasUserManageAuth}">
 			<div class="mt-3">
-				ユーザー情報の管理はこちら
+				ユーザー情報の管理はコチラ
 			</div>
+			<a th:href="@{/userList}" class="btn btn-danger">ユーザー管理画面へ</a>
 		</th:block>
-		<a href="" class="btn btn-danger">
-			ユーザー管理画面へ
-		</a>
 	</div>
 </body>
 
